# zinger_ignition

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_params.yaml
gui/: gui.config
launch/: ignition.launch.py  ignition_bridge.launch.py
models/room_with_walls_1/: model.sdf
worlds/: empty_world.sdf  room_with_walls_1.sdf
